// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / QuickFilter Another Icon And Label 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c4 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c7 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c2 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 8px;
  height: 32px;
  border-radius: 16px;
}

.c2:hover {
  color: #336BFF;
}

.c0 {
  cursor: inherit;
}

.c0:focus-within .c1 {
  outline: 1px solid #BDBDBD;
  background: #F5F5F5;
  color: #212121;
}

.c6 > * {
  color: inherit;
}

@media (min-width:976px) {
  .c2 {
    padding: 1px 12px;
    height: 24px;
  }
}

@media (max-width:975px) {
  .c2 {
    padding: 5px 12px;
  }
}

@media (min-width:976px) {
  .c8 {
    padding-top: 1px !important;
  }
}

<div
  style={
    Object {
      "backgroundColor": "white",
      "padding": "10px",
    }
  }
>
  <label
    className="c0"
    selected={false}
  >
    <div
      className="c1 c2"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <div
        className="c4"
      >
        <div
          className="c5 c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M8 9.5C8.82843 9.5 9.5 8.82843 9.5 8C9.5 7.17157 8.82843 6.5 8 6.5C7.17157 6.5 6.5 7.17157 6.5 8C6.5 8.82843 7.17157 9.5 8 9.5Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M0 13V3H16V13H0ZM2 5H14V11H2V5Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <div
          className="c5 c8"
        >
          <span
            className="c9"
          >
            Another label yqPomå
          </span>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Molecules / QuickFilter Both Icon And Label 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c4 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c7 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c2 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 8px;
  height: 32px;
  border-radius: 16px;
}

.c2:hover {
  color: #336BFF;
}

.c0 {
  cursor: inherit;
}

.c0:focus-within .c1 {
  outline: 1px solid #BDBDBD;
  background: #F5F5F5;
  color: #212121;
}

.c6 > * {
  color: inherit;
}

@media (min-width:976px) {
  .c2 {
    padding: 1px 12px;
    height: 24px;
  }
}

@media (max-width:975px) {
  .c2 {
    padding: 5px 12px;
  }
}

@media (min-width:976px) {
  .c8 {
    padding-top: 1px !important;
  }
}

<div
  style={
    Object {
      "backgroundColor": "white",
      "padding": "10px",
    }
  }
>
  <label
    className="c0"
    selected={false}
  >
    <div
      className="c1 c2"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <div
        className="c4"
      >
        <div
          className="c5 c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M4.5 1v.5h7v-1h1v1h3v14H.5v-14h3v-1h1V1zm-1 2v-.5h-2v3h13v-3h-2v1h-1v-1h-7v1h-1V3zM2 6.5h-.5v8h13v-8H2zm10.5 5a1 1 0 11-2 0 1 1 0 012 0z"
              fill="currentColor"
              stroke="currentColor"
            />
          </svg>
        </div>
        <div
          className="c5 c8"
        >
          <span
            className="c9"
          >
            Default
          </span>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Molecules / QuickFilter Only Icon 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c4 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c7 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c2 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 8px;
  height: 32px;
}

.c2:hover {
  color: #336BFF;
}

.c0 {
  cursor: inherit;
}

.c0:focus-within .c1 {
  outline: 1px solid #BDBDBD;
  background: #F5F5F5;
  color: #212121;
}

.c6 > * {
  color: inherit;
}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

<div
  style={
    Object {
      "backgroundColor": "white",
      "padding": "10px",
    }
  }
>
  <label
    className="c0"
    selected={false}
  >
    <div
      className="c1 c2"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <div
        className="c4"
      >
        <div
          className="c5 c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M8 9.5C8.82843 9.5 9.5 8.82843 9.5 8C9.5 7.17157 8.82843 6.5 8 6.5C7.17157 6.5 6.5 7.17157 6.5 8C6.5 8.82843 7.17157 9.5 8 9.5Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M0 13V3H16V13H0ZM2 5H14V11H2V5Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Molecules / QuickFilter Only Label 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c4 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c2 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 8px;
  height: 32px;
  border-radius: 16px;
}

.c2:hover {
  color: #336BFF;
}

.c0 {
  cursor: inherit;
}

.c0:focus-within .c1 {
  outline: 1px solid #BDBDBD;
  background: #F5F5F5;
  color: #212121;
}

@media (min-width:976px) {
  .c2 {
    padding: 1px 12px;
    height: 24px;
  }
}

@media (max-width:975px) {
  .c2 {
    padding: 5px 12px;
  }
}

@media (min-width:976px) {
  .c6 {
    padding-top: 1px !important;
  }
}

<div
  style={
    Object {
      "backgroundColor": "white",
      "padding": "10px",
    }
  }
>
  <label
    className="c0"
    selected={false}
  >
    <div
      className="c1 c2"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <div
        className="c4"
      >
        <div
          className="c5 c6"
        >
          <span
            className="c7"
          >
            Default
          </span>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Molecules / QuickFilter With Four Quick Filters 1`] = `
.c1 {
  padding: 8px;
  background-color: transparent;
}

.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -2px;
  margin-right: -2px;
}

.c2 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c7 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c7 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  box-sizing: border-box;
}

.c10 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c6 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c5 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 8px;
  height: 32px;
}

.c5:hover {
  color: #336BFF;
}

.c11 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 8px;
  height: 32px;
  border-radius: 16px;
}

.c11:hover {
  color: #336BFF;
}

.c3 {
  cursor: inherit;
}

.c3:focus-within .c4 {
  outline: 1px solid #BDBDBD;
  background: #F5F5F5;
  color: #212121;
}

.c9 > * {
  color: inherit;
}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

@media (min-width:976px) {
  .c11 {
    padding: 1px 12px;
    height: 24px;
  }
}

@media (max-width:975px) {
  .c11 {
    padding: 5px 12px;
  }
}

@media (min-width:976px) {
  .c12 {
    padding-top: 1px !important;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <label
        className="c3"
        selected={false}
      >
        <div
          className="c4 c5"
        >
          <input
            checked={false}
            className="c6"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="1"
          />
          <div
            className="c7"
          >
            <div
              className="c8 c9"
            >
              <svg
                aria-hidden="true"
                className="c10"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  d="M4.5 1v.5h7v-1h1v1h3v14H.5v-14h3v-1h1V1zm-1 2v-.5h-2v3h13v-3h-2v1h-1v-1h-7v1h-1V3zM2 6.5h-.5v8h13v-8H2zm10.5 5a1 1 0 11-2 0 1 1 0 012 0z"
                  fill="currentColor"
                  stroke="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
       
      <label
        className="c3"
        selected={false}
      >
        <div
          className="c4 c11"
        >
          <input
            checked={false}
            className="c6"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="1"
          />
          <div
            className="c7"
          >
            <div
              className="c8 c9"
            >
              <svg
                aria-hidden="true"
                className="c10"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  d="M4.5 1v.5h7v-1h1v1h3v14H.5v-14h3v-1h1V1zm-1 2v-.5h-2v3h13v-3h-2v1h-1v-1h-7v1h-1V3zM2 6.5h-.5v8h13v-8H2zm10.5 5a1 1 0 11-2 0 1 1 0 012 0z"
                  fill="currentColor"
                  stroke="currentColor"
                />
              </svg>
            </div>
            <div
              className="c8 c12"
            >
              <span
                className="c13"
              >
                 
              </span>
            </div>
          </div>
        </div>
      </label>
       
      <label
        className="c3"
        selected={false}
      >
        <div
          className="c4 c11"
        >
          <input
            checked={false}
            className="c6"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="1"
          />
          <div
            className="c7"
          >
            <div
              className="c8 c9"
            >
              <svg
                aria-hidden="true"
                className="c10"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  d="M4.5 1v.5h7v-1h1v1h3v14H.5v-14h3v-1h1V1zm-1 2v-.5h-2v3h13v-3h-2v1h-1v-1h-7v1h-1V3zM2 6.5h-.5v8h13v-8H2zm10.5 5a1 1 0 11-2 0 1 1 0 012 0z"
                  fill="currentColor"
                  stroke="currentColor"
                />
              </svg>
            </div>
            <div
              className="c8 c12"
            >
              <span
                className="c13"
              >
                label
              </span>
            </div>
          </div>
        </div>
      </label>
       
      <label
        className="c3"
        selected={false}
      >
        <div
          className="c4 c11"
        >
          <input
            checked={false}
            className="c6"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="0"
          />
          <div
            className="c7"
          >
            <div
              className="c8 c12"
            >
              <span
                className="c13"
              >
                Label one next to icon one
              </span>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / QuickFilter With Selected Initially 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c4 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c7 {
  color: #212121;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c3 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c2 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 8px;
  height: 32px;
  color: #336BFF;
  background: #EAF0FF;
}

.c2:hover {
  color: #336BFF;
}

.c0 {
  cursor: inherit;
}

.c0:focus-within .c1 {
  outline: 1px solid #BDBDBD;
  background: #F5F5F5;
  color: #212121;
  outline: 1px solid #336BFF;
  background: #EAF0FF;
  color: #336BFF;
}

.c6 > * {
  color: inherit;
}

@media (min-width:976px) {

}

@media (max-width:975px) {

}

<div
  style={
    Object {
      "backgroundColor": "white",
      "padding": "10px",
    }
  }
>
  <label
    className="c0"
    selected={true}
  >
    <div
      className="c1 c2"
    >
      <input
        checked={true}
        className="c3"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <div
        className="c4"
      >
        <div
          className="c5 c6"
        >
          <svg
            aria-hidden="true"
            className="c7"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            width={16}
          >
            <path
              d="M8 9.5C8.82843 9.5 9.5 8.82843 9.5 8C9.5 7.17157 8.82843 6.5 8 6.5C7.17157 6.5 6.5 7.17157 6.5 8C6.5 8.82843 7.17157 9.5 8 9.5Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M0 13V3H16V13H0ZM2 5H14V11H2V5Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots Molecules / QuickFilter With Value Controlled Behavior 1`] = `
.c0 {
  background: #FFFFFF;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.03);
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -2px;
  margin-right: -2px;
}

.c5 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  opacity: 0;
  pointer-events: none;
  position: absolute;
}

.c3 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  background: #F5F5F5;
  color: #212121;
  cursor: pointer;
  padding: 8px;
  height: 32px;
  border-radius: 16px;
}

.c3:hover {
  color: #336BFF;
}

.c1 {
  cursor: inherit;
}

.c1:focus-within .c2 {
  outline: 1px solid #BDBDBD;
  background: #F5F5F5;
  color: #212121;
}

@media (min-width:976px) {
  .c3 {
    padding: 1px 12px;
    height: 24px;
  }
}

@media (max-width:975px) {
  .c3 {
    padding: 5px 12px;
  }
}

@media (min-width:976px) {
  .c7 {
    padding-top: 1px !important;
  }
}

<div
  className="c0"
>
  <label
    className="c1"
    selected={false}
  >
    <div
      className="c2 c3"
    >
      <input
        checked={false}
        className="c4"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
        value="This component is controlled"
      />
      <div
        className="c5"
      >
        <div
          className="c6 c7"
        >
          <span
            className="c8"
          >
            Controlled selection card
          </span>
        </div>
      </div>
    </div>
  </label>
  <button
    onClick={[Function]}
    type="button"
  >
    Selected
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Not selected
  </button>
  value: 
  false
</div>
`;
